--- a/osmfr.yml
+++ b/osmfr.yml
@@ -329,7 +329,7 @@ Layer:
     <<: *extents
     Datasource:
       <<: *osm2pgsql
-      table: " /* buildings-lz */ (select way,building,railway,amenity,shop from planet_osm_polygon where (railway='station' or building in ('station','supermarket','civic') or amenity in ('place_of_worship', 'public_building','townhall','courthouse','police','post_office','theatre') or shop in ('mall','department_store')) and way_area < 2000000 order by z_order,way_area desc) as buildings"
+      table: " /* buildings-lz */ (select way,building,railway,amenity,shop from planet_osm_polygon where (railway='station' or building in ('train_station','station','supermarket','civic') or amenity in ('place_of_worship', 'public_building','townhall','courthouse','police','post_office','theatre') or shop in ('mall','department_store')) and way_area < 2000000 order by z_order,way_area desc) as buildings"
       simplify_geometries: 'true'
     id: buildings-lz
     class: ''
@@ -337,7 +337,7 @@ Layer:
     <<: *extents
     Datasource:
       <<: *osm2pgsql
-      table: " /* buildings */ (select way, aeroway, amenity, tags->'heritage' as heritage, case when building in ('residential','house','garage','garages','detached','terrace','apartments') then 'INT-light'::text else building end as building, tags->'wall' as wall  from planet_osm_polygon  where ((building is not null  and building not in ('no','station','supermarket','planned','civic')   and (railway is null or railway != 'station')   and (amenity is null or amenity not in ('place_of_worship', 'public_building','townhall','courthouse','police','post_office','theatre')))  or aeroway = 'terminal') and way_area < 2000000   order by z_order,way_area desc) as buildings"
+      table: " /* buildings */ (select way, aeroway, amenity, tags->'heritage' as heritage, case when building in ('residential','house','garage','garages','detached','terrace','apartments') then 'INT-light'::text else building end as building, tags->'wall' as wall  from planet_osm_polygon  where ((building is not null  and building not in ('no','train_station','station','supermarket','planned','civic')   and (railway is null or railway != 'station')   and (amenity is null or amenity not in ('place_of_worship', 'public_building','townhall','courthouse','police','post_office','theatre')))  or aeroway = 'terminal') and way_area < 2000000   order by z_order,way_area desc) as buildings"
       simplify_geometries: 'true'
     id: buildings
     class: ''
